fixing footer nav alignment

--- a/_source/stylus/index.styl
+++ b/_source/stylus/index.styl
@@ -57,6 +57,8 @@ footer
       list-style: none
       align-items: center
       justify-content: center
+      margin: 0
+      padding: 10px 0
 
       li
         display: flex-inline
@@ -159,6 +161,12 @@ header
 
 
 @media (max-width: 767px)
+  footer nav li
+    font-size: 12px
+
+    a
+      padding: 0 7px
+
   header img.logo
     max-width: 80%
 
